# landing_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml  ral22roscia
code_optimization/: casadi_call_toy.py  casadi_cpp_parametric_nlp.py  casadi_cpp_toy.py  knitro_casadi_example.py  knitro_example.py  nlp.c
controller/: __init__.py  bezier.py  extended_landing_controller.py  feasibility.py  go1_kin_region.mat  landingController.py  landingManager.py  landing_controller.py  landing_controller_with_python_bindings.py  landing_manager.py  lookup_table_forces.mat  settings.py  utility.py  vhisip_dynamics.py
go1tests/: FWP.mat  WBCgains.md  check_in_kin_region.py  falling_detection.py  feasible_wrench_polytope.py  force_polytopes.py  go1_kin_region.mat  go1_kin_region_l0.mat  kinematic_region.py  lookup_table_forces.mat  profiler.py  reachable_region.py  send_torques.py  sensor_test.py  sensor_test_old.py  setupGo1.md  speedups.md  start_up.py  start_up_old.py  wbc_ptofile.py  wbc_pushup.py
scripts/: check_zmp_feasibility.py  computeOrientationError.py  elc_simulation.py  landing_contoller_real_robot.py  landing_controller.py  lc_experiment.py  lc_find_limits.py  lc_find_limits_noise.py  lc_load.py  lc_simulation.py  limits.txt  optimize_bezier.py  optimize_bezier_call_cpp.py  optimize_bezier_generate_cpp.py  plot_imu_int.py  plot_polar.py  plots_elc_sim1.py  plots_elc_sim2.py  polar_chart_maker.py  polar_map.py  restore.py  simplified_casadi_optimize_bezier.py  simplified_optistack_knitro_optimize_bezier.py  vhsip_bezier.py  vhsip_coupled_opt.py  wbc.py  (+1 more)
(+136 files in other folders)
